# gmail-ai-unsub

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  config.example.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: build-test.yml  ci.yml  release.yml
docs/: configuration.md  oauth-credentials.md  releasing.md  setup.md  usage.md
scripts/: build-with-credentials.sh  set-github-secrets.sh
src/gmail_ai_unsub/: cli.py  config.py
src/gmail_ai_unsub/classifier/: email_classifier.py
src/gmail_ai_unsub/gmail/: auth.py
src/gmail_ai_unsub/setup/: schema.py  wizard.py
src/gmail_ai_unsub/unsubscribe/: browser_agent.py  extractor.py
